<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/grey_dark">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="15dp"
            app:cardUseCompatPadding="true">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    app:srcCompat="@drawable/home"
                    android:scaleType="fitXY"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_alignParentStart="true"

                    app:srcCompat="@drawable/ic_baseline_arrow_back_24"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    app:srcCompat="@drawable/ic_baseline_favorite_border_24"
                    android:layout_gravity="end"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_alignParentEnd="true"/>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="10dp"
            app:cardUseCompatPadding="true"
            app:cardBackgroundColor="@color/grey_card">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="10dp">
                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:paddingStart="10dp"
                    android:text="Economical And Elegant"
                    android:textColor="@color/black"
                    android:layout_marginBottom="10dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        app:srcCompat="@drawable/ic_baseline_star_rate_24"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        app:srcCompat="@drawable/ic_baseline_star_rate_24"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        app:srcCompat="@drawable/ic_baseline_star_rate_24"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        app:srcCompat="@drawable/ic_baseline_star_rate_24"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        app:srcCompat="@drawable/ic_baseline_star_half_24"/>
                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="4.8"
                        android:textColor="@color/black"
                        android:layout_marginTop="3dp"
                        android:layout_marginStart="2dp"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/deskription_menu"
                    android:textColor="@color/black"
                    android:layout_marginBottom="15dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginTop="15dp"/>
                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ingredients"
                    android:textColor="@color/black"
                    android:layout_marginStart="10dp"/>
                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Resep"
                    android:textColor="@color/white_blur"
                    android:layout_marginStart="10dp" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="15dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="15dp"
                        android:layout_weight="0.5">
                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/Price"
                            android:textColor="@color/black"
                            android:layout_marginStart="10dp" />
                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/Harga_barang"
                            android:textColor="@color/black"
                            android:layout_marginStart="10dp"
                            android:textSize="24sp"/>
                    </LinearLayout>
                    <Button
                        android:id="@+id/button"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="Order Now"
                        android:textAllCaps="false"
                        android:layout_marginEnd="15dp"
                        android:layout_gravity="center_vertical"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/grey_card"
            app:cardUseCompatPadding="true">
            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:background="@color/white"
                tools:context=".MainActivity" >
            </LinearLayout>
            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:text="Rekomendasi Furnitures"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="15dp"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewHotel"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>
